--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,7 +32,8 @@ jobs:
       - uses: jurplel/install-qt-action@v4
       - name: build and release
         run: |
-          apt install -y libx11-dev x11proto-dev libxcb1-dev
+          sudo apt update
+          sudo apt install -y libx11-dev x11proto-dev libxcb1-dev
           mkdir build
           cd build
           qmake ../src/simplecal.pro
