--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,7 +34,7 @@ jobs:
       - name: build and release
         run: |
           sudo apt update
-          sudo apt install -y libx11-dev x11proto-dev libxcb1-dev qt6-base-dev qt6-tools-dev
+          sudo apt install -y libx11-dev x11proto-dev libxcb1-dev qt6-base-dev qmake6
           mkdir build
           cd build
           qmake6 ../src/simpleclip.pro
