--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,7 +19,7 @@ jobs:
           cd build
           qmake ../src/simpleclip.pro
           nmake
-          windeployqt --release --no-translations release/simplecal.exe
+          windeployqt --release --no-translations release/simpleclip.exe
           tar -a -c -f release.zip release
           python3 -c "from datetime import datetime; print(datetime.today().isoformat().replace(':', '_'))" >> date.txt
           gh release create "$(cat date.txt)_windows" release.zip
