--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,7 @@ jobs:
           windeployqt --release --no-translations release/simpleclip.exe
           tar -a -c -f release.zip release
           python3 -c "from datetime import datetime; print(datetime.today().isoformat().replace(':', '_'))" >> date.txt
-          gh release create "$(cat date.txt)_windows" release.zip
+          gh release create "$(cat date.txt)_windows" release_windows.zip
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   build-and-release-qt-program-x11:
@@ -41,6 +41,6 @@ jobs:
           make
           tar -a -c -f release.zip simpleclip
           python3 -c "from datetime import datetime; print(datetime.today().isoformat().replace(':', '_'))" >> date.txt
-          gh release create "$(cat date.txt)_x11" release.zip
+          gh release create "$(cat date.txt)_x11" release_x11.zip
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
